--- a/frontEnd/portfolio/src/assets/contactUs.module.scss
+++ b/frontEnd/portfolio/src/assets/contactUs.module.scss
@@ -23,6 +23,8 @@
         >h2{
             font-size: 1.5rem;
             line-height: 2.5rem;
+            text-wrap: nowrap;
+            
             > span {
               color: var(--main-color);
             }
