--- a/frontEnd/portfolio/src/assets/services.module.scss
+++ b/frontEnd/portfolio/src/assets/services.module.scss
@@ -22,6 +22,8 @@
         >h2{
             font-size: 1.5rem;
             line-height: 2.5rem;
+            text-wrap: nowrap;
+            
             > span {
               color: var(--main-color);
             }
