--- a/frontEnd/portfolio/src/assets/skill.module.scss
+++ b/frontEnd/portfolio/src/assets/skill.module.scss
@@ -21,6 +21,7 @@
         >h2{
             font-size: 1.5rem;
             line-height: 2.5rem;
+            text-wrap: nowrap;
 
              /* Span to highlight part of the heading */
             > span {
