download button css issue fixed

--- a/frontEnd/portfolio/src/assets/homeSection.module.scss
+++ b/frontEnd/portfolio/src/assets/homeSection.module.scss
@@ -22,16 +22,6 @@
         padding-bottom: 5rem;
     }
 
-    // // For screen width less than 769px (Responsive layout)
-    // @media screen and (max-width:769px){
-    //     display: flex;
-    //     flex-direction: column-reverse;
-    //     justify-content: center;
-    //     gap: 2rem;
-    //     padding-top: 8rem;
-    //     padding-bottom: 5rem;
-    // }
-
     // Responsive adjustments for screen height greater than 801px and width greater than 769px
     @media screen and (min-height: 801px) and (min-width: 769px) {
         height: max-content;
@@ -122,6 +112,8 @@
             border-radius: 3rem;
             text-decoration: none;
             transition: .2s ease;
+            flex-wrap: nowrap;
+            text-wrap: nowrap;
 
             // Hover effect on the download button
             &:hover {
