--- a/frontEnd/portfolio/src/assets/skill.module.scss
+++ b/frontEnd/portfolio/src/assets/skill.module.scss
@@ -8,6 +8,18 @@
     justify-content: center;
     align-items: center;
 
+    // Responsive adjustments for screen width less than 769px
+    @media screen and (max-width: 769px) {
+        height: max-content;
+    }
+
+    // Responsive adjustments for screen height greater than 801px and width greater than 769px
+    @media screen and (min-height: 801px) and (min-width: 769px) {
+        height: max-content;
+        padding-top: 8rem;
+        padding-bottom: 5rem;
+    }
+
     /* Heading section for the skills, includes title and description */
     .skillHeading{
         padding: 0 10%;
