--- a/frontEnd/portfolio/src/assets/about.module.scss
+++ b/frontEnd/portfolio/src/assets/about.module.scss
@@ -1,22 +1,12 @@
 // About Section styling
 .aboutSection {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: 0rem 7%;
   flex-shrink: 0;
+  display: flex;
+  align-items: center;
   background-color: var(--primary-color);
-
-  // Responsive adjustments for screen width less than 769px
-  @media screen and (max-width: 769px) {
-    height: max-content;
-  }
-
-  // Responsive adjustments for screen height greater than 801px and width greater than 769px
-  @media screen and (min-height: 801px) and (min-width: 769px) {
-    height: max-content;
-    padding-top: 8rem;
-    padding-bottom: 5rem;
-  }
 
   // Content section within the about section
   .aboutContentSection {
