--- a/frontEnd/portfolio/src/assets/contactUs.module.scss
+++ b/frontEnd/portfolio/src/assets/contactUs.module.scss
@@ -1,19 +1,25 @@
 /* Main section for the contact form */
 .contactUsSection{
     width: 100%;
-    height: max-content;
+    min-height: 100vh;
     padding: 0rem 7%;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     align-items: center;
+    justify-content: center;
     background-color: var(--primary-color);
+
+    // For screen height less than 769px
+    @media screen and (max-width:769px) {
+        padding-top: 8rem;
+        padding-bottom: 5rem;
+    }
 
     /* Heading section for the contact form */
     .contactUsHeading{
         padding: 0 10%;
-        margin-top: 5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
