--- a/frontEnd/portfolio/src/assets/homeSection.module.scss
+++ b/frontEnd/portfolio/src/assets/homeSection.module.scss
@@ -1,7 +1,7 @@
 // Home section styling
 .homeSection{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 0rem 7%;
     display: grid;
     grid-template-columns: 70% 30%;
@@ -9,9 +9,8 @@
     align-items: center;
     flex-shrink: 0;
 
-    // For screen height greater than 801px and width greater than 769px
+    // For screen height less greater than 769px
     @media screen and (max-width:769px) {
-        height: max-content;
         padding-top: 8rem;
         padding-bottom: 5rem;
         display: flex;
@@ -24,7 +23,6 @@
 
     // Responsive adjustments for screen height greater than 801px and width greater than 769px
     @media screen and (min-height: 801px) and (min-width: 769px) {
-        height: max-content;
         padding-top: 8rem;
         padding-bottom: 5rem;
     }
