--- a/frontEnd/portfolio/src/assets/projects.module.scss
+++ b/frontEnd/portfolio/src/assets/projects.module.scss
@@ -1,22 +1,17 @@
 /* Main container for the projects section */
 .projectsSection{
     width: 100%;
-    height: max-content;
+    min-height: 100vh;
     padding: 0rem 7%;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     align-items: center;
+    justify-content: center;
 
-    // Responsive adjustments for screen width less than 769px
-    @media screen and (max-width: 769px) {
-        height: max-content;
-    }
-
-    // Responsive adjustments for screen height greater than 801px and width greater than 769px
-    @media screen and (min-height: 801px) and (min-width: 769px) {
-        height: max-content;
+    // For screen height less than 769px
+    @media screen and (max-width:769px) {
         padding-top: 8rem;
         padding-bottom: 5rem;
     }
@@ -24,7 +19,6 @@
     /* Heading section for projects with title and description */
     .projectsHeading{
         padding: 0 10%;
-        margin-top: 5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
