--- a/frontEnd/portfolio/src/assets/services.module.scss
+++ b/frontEnd/portfolio/src/assets/services.module.scss
@@ -1,7 +1,7 @@
 /* Main container for the services section */
 .servicesSection{
     width: 100%;
-    height: max-content;
+    min-height: 100vh;
     padding: 0rem 7%;
     display: flex;
     flex-direction: column;
@@ -9,10 +9,15 @@
     align-items: center;
     background-color: var(--primary-color);
 
+    // For screen height less than 769px
+    @media screen and (max-width:769px) {
+        padding-top: 8rem;
+        padding-bottom: 5rem;
+    }
+
     /* Container for the section heading */
     .servicesHeading{
         padding: 0 10%;
-        margin-top: 5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
