--- a/frontEnd/portfolio/src/assets/skill.module.scss
+++ b/frontEnd/portfolio/src/assets/skill.module.scss
@@ -1,21 +1,15 @@
 /* Main container for the skills section */
 .skillSection{
     width: 100%;
-    height: max-content;
+    min-height: 100vh;
     padding: 0rem 7%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    // Responsive adjustments for screen width less than 769px
-    @media screen and (max-width: 769px) {
-        height: max-content;
-    }
-
-    // Responsive adjustments for screen height greater than 801px and width greater than 769px
-    @media screen and (min-height: 801px) and (min-width: 769px) {
-        height: max-content;
+    // For screen height less than 769px
+    @media screen and (max-width:769px) {
         padding-top: 8rem;
         padding-bottom: 5rem;
     }
@@ -23,7 +17,6 @@
     /* Heading section for the skills, includes title and description */
     .skillHeading{
         padding: 0 10%;
-        margin-top: 5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
