some issues fixed

--- a/frontEnd/portfolio/src/assets/contactUs.module.scss
+++ b/frontEnd/portfolio/src/assets/contactUs.module.scss
@@ -2,7 +2,7 @@
 .contactUsSection{
     width: 100%;
     min-height: 100vh;
-    padding: 0rem 7%;
+    padding: 8rem 7% 5rem 7%;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
