--- a/frontEnd/portfolio/src/app/globals.css
+++ b/frontEnd/portfolio/src/app/globals.css
@@ -25,6 +25,7 @@ body {
   /* font-size: 62.5%; */
   background-color: var(--bg-color);
   color: var(--text-color);
+  scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar{scrollbar-width: none;}
