--- a/frontEnd/portfolio/src/assets/projects.module.scss
+++ b/frontEnd/portfolio/src/assets/projects.module.scss
@@ -2,19 +2,13 @@
 .projectsSection{
     width: 100%;
     min-height: 100vh;
-    padding: 0rem 7%;
+    padding: 8rem 7% 5rem 7%;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     align-items: center;
     justify-content: center;
-
-    // For screen height less than 769px
-    @media screen and (max-width:769px) {
-        padding-top: 8rem;
-        padding-bottom: 5rem;
-    }
 
     /* Heading section for projects with title and description */
     .projectsHeading{
