--- a/frontEnd/portfolio/src/assets/services.module.scss
+++ b/frontEnd/portfolio/src/assets/services.module.scss
@@ -2,18 +2,12 @@
 .servicesSection{
     width: 100%;
     min-height: 100vh;
-    padding: 0rem 7%;
+    padding: 8rem 7% 5rem 7%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: var(--primary-color);
-
-    // For screen height less than 769px
-    @media screen and (max-width:769px) {
-        padding-top: 8rem;
-        padding-bottom: 5rem;
-    }
 
     /* Container for the section heading */
     .servicesHeading{
