--- a/frontEnd/portfolio/src/assets/skill.module.scss
+++ b/frontEnd/portfolio/src/assets/skill.module.scss
@@ -2,17 +2,11 @@
 .skillSection{
     width: 100%;
     min-height: 100vh;
-    padding: 0rem 7%;
+    padding: 8rem 7% 5rem 7%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    // For screen height less than 769px
-    @media screen and (max-width:769px) {
-        padding-top: 8rem;
-        padding-bottom: 5rem;
-    }
 
     /* Heading section for the skills, includes title and description */
     .skillHeading{
