--- a/frontEnd/portfolio/src/assets/projects.module.scss
+++ b/frontEnd/portfolio/src/assets/projects.module.scss
@@ -1,18 +1,30 @@
 /* Main container for the projects section */
 .projectsSection{
     width: 100%;
-    min-height: 100vh;
-    padding: 8rem 7% 5rem 7%;
+    height: max-content;
+    padding: 0rem 7%;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     align-items: center;
-    justify-content: center;
+
+    // Responsive adjustments for screen width less than 769px
+    @media screen and (max-width: 769px) {
+        height: max-content;
+    }
+
+    // Responsive adjustments for screen height greater than 801px and width greater than 769px
+    @media screen and (min-height: 801px) and (min-width: 769px) {
+        height: max-content;
+        padding-top: 8rem;
+        padding-bottom: 5rem;
+    }
 
     /* Heading section for projects with title and description */
     .projectsHeading{
         padding: 0 10%;
+        margin-top: 5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -70,7 +82,7 @@
             &:hover{box-shadow: 0 0 10px var(--text-color);}
 
             /* Image at the top of each project card */
-            >img{
+            .img{
                 width: 100%;
                 border-top-left-radius: 1.5rem;
                 border-top-right-radius: 1.5rem;
