--- a/frontEnd/portfolio/src/assets/services.module.scss
+++ b/frontEnd/portfolio/src/assets/services.module.scss
@@ -1,8 +1,8 @@
 /* Main container for the services section */
 .servicesSection{
     width: 100%;
-    min-height: 100vh;
-    padding: 8rem 7% 5rem 7%;
+    height: max-content;
+    padding: 0rem 7%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,6 +12,7 @@
     /* Container for the section heading */
     .servicesHeading{
         padding: 0 10%;
+        margin-top: 5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
