--- a/frontEnd/portfolio/src/assets/skill.module.scss
+++ b/frontEnd/portfolio/src/assets/skill.module.scss
@@ -1,16 +1,29 @@
 /* Main container for the skills section */
 .skillSection{
     width: 100%;
-    min-height: 100vh;
-    padding: 8rem 7% 5rem 7%;
+    height: max-content;
+    padding: 0rem 7%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
+    // Responsive adjustments for screen width less than 769px
+    @media screen and (max-width: 769px) {
+        height: max-content;
+    }
+
+    // Responsive adjustments for screen height greater than 801px and width greater than 769px
+    @media screen and (min-height: 801px) and (min-width: 769px) {
+        height: max-content;
+        padding-top: 8rem;
+        padding-bottom: 5rem;
+    }
+
     /* Heading section for the skills, includes title and description */
     .skillHeading{
         padding: 0 10%;
+        margin-top: 5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -126,7 +139,7 @@
                     display: block;
     
                     /* Styling for the skill logo image */
-                    >img{
+                    .img{
                         width: 100%;
                         height: 100%;
                         object-fit: fill;
